2010-09-08  Robert Millan  <rmh@gnu.org>

	* configure.ac: Remove `--enable-grub-fstest' option.
	* Makefile.util.def (grub-fstest): Remove COND_GRUB_FSTEST condition.

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Use
	`grub-fstest' instead of `grub-probe' for readability verification.
	* util/grub-probe.c (probe): Remove readability verification kludge.

2010-09-08  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Pass `--device ${GRUB_DEVICE}' when
	initializing `GRUB_FS'.

2010-09-08  BVK Chaitanya  <bvk.groups@gmail.com>

	Not command (!) support to GRUB script.

	* tests/grub_script_not.in: New test.
	* Makefile.util.def: Rules for new test.

	* grub-core/script/execute.c (grub_script_execute_cmdline): Handle
	! command as a special case.
	* grub-core/script/yylex.l (GRUB_PARSER_TOKEN_NOT): Removed.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>

	* grub-core/commands/wildcard.c (wildcard_expand): Fix wrong
	grub_free.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>

	* docs/grub.texi (Shell-like scripting): Fix @dots to @dots{}.

2010-09-07  BVK Chaitanya  <bvk.groups@gmail.com>

	* docs/grub.texi (Shell-like scripting): Documentation for break,
	continue, shift and return commands.

2010-09-06  Vladimir Serbinenko  <phcoder@gmail.com>

	Rename CD-ROM to cd on BIOS.

	* grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_get_drive): Recognise
	"cd".
	(grub_biosdisk_call_hook): Call with "cd" instead of arbitrary hdX.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c (main): Reinit LVM and RAID.
	* util/grub-probe.c (main): Likewise.
	* util/i386/pc/grub-setup.c (main): Likewise.
	* util/sparc64/ieee1275/grub-setup.c (main): Likewise.
	Reported and debugged by: alexxy

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (grub_lvm_scan_device) [GRUB_UTIL]: Output more
	diagnostic info.

2010-09-05  Jo Shields <directhex@apebox.org>
